--- a/src/app/layout/dashboard/dashboard.component.html
+++ b/src/app/layout/dashboard/dashboard.component.html
@@ -1,64 +1,31 @@
-<div class="mb-20" fxLayout="row" fxLayout.lt-md="column" fxFlex fxLayoutGap="20px">
-    <div fxFlex>
-        <app-stat [bgClass]="'danger'" [icon]="'dashboard'" [count]="13" [label]="'New Tickets!'"></app-stat>
-    </div>
-    <div fxFlex>
-        <app-stat [bgClass]="'warn'" [icon]="'view_list'" [count]="12" [label]="'New task!'"></app-stat>
-    </div>
-    <div fxFlex>
-        <app-stat [bgClass]="'success'" [icon]="'shopping_cart'" [count]="124" [label]="'New Orders!'"></app-stat>
-    </div>
-    <div fxFlex>
-        <app-stat [bgClass]="'info'" [icon]="'contact_support'" [count]="13" [label]="'New Tickets!'"></app-stat>
-    </div>
-</div>
 
-<div class="mb-20" flFlex flexLayout="row" flexLayout.lt-md="column">
-    <div fxFlex>
-        <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-            <ng-container matColumnDef="position">
-                <th mat-header-cell *matHeaderCellDef> No. </th>
-                <td mat-cell *matCellDef="let element"> {{element.position}} </td>
-            </ng-container>
-            <ng-container matColumnDef="name">
-                <th mat-header-cell *matHeaderCellDef> Name </th>
-                <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-            </ng-container>
-            <ng-container matColumnDef="weight">
-                <th mat-header-cell *matHeaderCellDef> Weight </th>
-                <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
-            </ng-container>
-            <ng-container matColumnDef="symbol">
-                <th mat-header-cell *matHeaderCellDef> Symbol </th>
-                <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
-            </ng-container>
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        </table>
-    </div>
-</div>
+<div class='md-padding' layout="row" layout-wrap>
+        
+                <mat-card style="width: 250px" *ngFor="let item of barbeques">
+                    <img mat-card-image src="assets/images/image1.jpeg">
+                    <mat-card-header style="justify-content: center">
+                        <mat-card-title>
+                            <h3 class="m-0">{{item.name}}</h3>
+                        </mat-card-title>
+                    </mat-card-header>
+                    <mat-card-content>
+                        <p>Model: {{item.model}}</p>
+                        <p>
+                            {{item.description}}
+                        </p>
+                        <p> zipcode: {{item.zipcode}}</p>
+                    </mat-card-content>
+        
+                    <mat-card-actions>
+                        <button mat-raised-button color="primary" *ngIf="item.rented==0" (click)='rent(item.id)'>
+                           Rentar
+                        </button>
+                        <div *ngFor="let barbequeR of rentedBarbeques">
+                            <button mat-raised-button color="warn" *ngIf="item.rented==1 && item.id==barbequeR.id" (click)='return(item.id)'>
+                            Retornar
+                            </button>
+                        </div>
+                    </mat-card-actions>
+                </mat-card>
+      </div>
 
-<div class="mb-20" fxLayout="row" fxLayout.lt-md="column" fxFlex fxLayoutGap="20px">
-    <div fxFlex *ngFor="let item of places">
-        <mat-card>
-            <img mat-card-image [src]="item.imgSrc">
-            <mat-card-header style="justify-content: center">
-                <mat-card-title>
-                    <h3 class="m-0">{{item.place}}</h3>
-                </mat-card-title>
-            </mat-card-header>
-            <mat-card-content>
-                <p>
-                    {{item.description}}
-                </p>
-            </mat-card-content>
-
-            <mat-card-actions>
-                <button mat-button>{{item.charge}}</button>
-                <button mat-button>
-                    <mat-icon class="nav-icon">location_on</mat-icon> {{item.location}}
-                </button>
-            </mat-card-actions>
-        </mat-card>
-    </div>
-</div>
