--- a/src/app/layout/dashboard/dashboard.component.scss
+++ b/src/app/layout/dashboard/dashboard.component.scss
@@ -3,6 +3,7 @@ table {
 }
 .mat-card {
     text-align: center;
+    display: inline-grid;
     img {
         border-radius: 5px;
         margin-top: -25px;
@@ -16,3 +17,4 @@ table {
 .mb-20 {
     margin-bottom: 20px;
 }
+
