--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,38 +1,33 @@
 <div class="login-page">
     <div class="content">
         <!-- <h1 class="app-name">Sb Admin Material</h1> -->
-        <form class="login-form">
+        <form class="login-form" [formGroup]="loginForm">
             <div class="text-center">
-                <h2 class="app-name">Sb Admin Material</h2>
+                <h2 class="app-name">Login </h2>
             </div>
             <div fxFlex fxLayout="row" fxLayout.lt-md="column">
                 <div fxFlexFill>
                     <mat-form-field class="w-100">
-                        <input matInput placeholder="Email">
+                        <input matInput placeholder="Email" formControlName="email">
                     </mat-form-field>
                 </div>
             </div>
             <div fxFlex fxLayout="row" fxLayout.lt-md="column">
                 <div fxFlexFill>
                     <mat-form-field class="w-100">
-                        <input matInput type="password" placeholder="Password">
+                        <input matInput type="password" placeholder="Password" formControlName="password" >
                     </mat-form-field>
-                </div>
-            </div>
-            <div fxFlex fxLayout="row" fxLayout.lt-md="column" style="margin: 20px 0 30px 0">
-                <div fxFlex>
-                    <mat-checkbox color="primary">Remember Me</mat-checkbox>
-                </div>
-                <div fxFlex fxLayoutAlign="end">
-                    <a href="javascript:void(0)">Forget Password</a>
                 </div>
             </div>
             <div fxFlex fxLayout="row" fxLayout.lt-md="column">
                 <div fxFlexFill>
-                    <button mat-raised-button color="primary" class="w-100" (click)="onLogin()">Login</button>
+                    <button mat-raised-button color="primary" class="w-100" (click)="onLogin($event)">Login</button>
                 </div>
             </div>
-
+            <br>
+            <div fxFlexFill >   
+                    <button mat-button class="right" (click)="redirect($event)">Registro </button>
+                </div>
         </form>
     </div>
 </div>
